// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange should not render filler exchange cards 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          send.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8 space-x-4"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-500"
                >
                  Your Balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                  data-testid="Balance__value"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 ksGIYG border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-3xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 Qqquu"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="grid grid-cols-3 w-full gap-4.5"
              data-testid="ExchangeGrid"
            >
              <div
                data-testid="PluginCard--test-exchange-1"
              >
                <div>
                  <button
                    class="Cardstyles__CardButton-sc-1uddqgb-0 jaxCkf"
                    data-testid="Card"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-4"
                    >
                      <div
                        class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
                      >
                        <div
                          class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
                          data-testid="PluginImage__placeholder"
                        >
                          <svg>
                            plugin-logo-placeholder.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="flex flex-col truncate"
                      >
                        <span
                          class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Unknown
                        </span>
                        <div
                          class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                        >
                          <div
                            class="truncate"
                          >
                            Test Exchange 1
                          </div>
                          <span />
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                    >
                      <div
                        class="flex items-center space-x-2"
                      />
                      <div
                        class="relative"
                      >
                        <span
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex overflow-hidden justify-center w-4"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                data-testid="PluginCard--test-exchange-2"
              >
                <div>
                  <button
                    class="Cardstyles__CardButton-sc-1uddqgb-0 jaxCkf"
                    data-testid="Card"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-4"
                    >
                      <div
                        class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
                      >
                        <div
                          class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
                          data-testid="PluginImage__placeholder"
                        >
                          <svg>
                            plugin-logo-placeholder.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="flex flex-col truncate"
                      >
                        <span
                          class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Unknown
                        </span>
                        <div
                          class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                        >
                          <div
                            class="truncate"
                          >
                            Test Exchange 2
                          </div>
                          <span />
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                    >
                      <div
                        class="flex items-center space-x-2"
                      />
                      <div
                        class="relative"
                      >
                        <span
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex overflow-hidden justify-center w-4"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                data-testid="PluginCard--test-exchange-3"
              >
                <div>
                  <button
                    class="Cardstyles__CardButton-sc-1uddqgb-0 jaxCkf"
                    data-testid="Card"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-4"
                    >
                      <div
                        class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
                      >
                        <div
                          class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
                          data-testid="PluginImage__placeholder"
                        >
                          <svg>
                            plugin-logo-placeholder.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="flex flex-col truncate"
                      >
                        <span
                          class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Unknown
                        </span>
                        <div
                          class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                        >
                          <div
                            class="truncate"
                          >
                            Test Exchange 3
                          </div>
                          <span />
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                    >
                      <div
                        class="flex items-center space-x-2"
                      />
                      <div
                        class="relative"
                      >
                        <span
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex overflow-hidden justify-center w-4"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should open & close add exchange modal 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          send.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8 space-x-4"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-500"
                >
                  Your Balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                  data-testid="Balance__value"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 ksGIYG border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-3xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 Qqquu"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="grid grid-cols-3 w-full gap-4.5"
              data-testid="ExchangeGrid"
            >
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          send.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8 space-x-4"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-500"
                >
                  Your Balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                  data-testid="Balance__value"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 ksGIYG border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-3xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 Qqquu"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="grid grid-cols-3 w-full gap-4.5"
              data-testid="ExchangeGrid"
            >
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render filler exchange cards 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          send.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8 space-x-4"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-500"
                >
                  Your Balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                  data-testid="Balance__value"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 ksGIYG border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-3xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 Qqquu"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="grid grid-cols-3 w-full gap-4.5"
              data-testid="ExchangeGrid"
            >
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render with exchanges 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  <div
                    class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                  />
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iyevwF p-1"
                        height="20"
                        width="20"
                      >
                        <svg>
                          send.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8 space-x-4"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-500"
                >
                  Your Balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                  data-testid="Balance__value"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 ksGIYG border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-3xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 Qqquu"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="grid grid-cols-3 w-full gap-4.5"
              data-testid="ExchangeGrid"
            >
              <div
                data-testid="PluginCard--test-exchange"
              >
                <div>
                  <button
                    class="Cardstyles__CardButton-sc-1uddqgb-0 jaxCkf"
                    data-testid="Card"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-4"
                    >
                      <div
                        class="overflow-hidden flex-shrink-0 rounded-lg w-25 h-25"
                      >
                        <div
                          class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
                          data-testid="PluginImage__placeholder"
                        >
                          <svg>
                            plugin-logo-placeholder.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="flex flex-col truncate"
                      >
                        <span
                          class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          Unknown
                        </span>
                        <div
                          class="flex items-center mt-1 space-x-2 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                        >
                          <div
                            class="truncate"
                          >
                            Test Exchange
                          </div>
                          <span />
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                    >
                      <div
                        class="flex items-center space-x-2"
                      />
                      <div
                        class="relative"
                      >
                        <span
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex overflow-hidden justify-center w-4"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
              <div>
                <button
                  class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                  data-testid="Card"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="rounded-xl border-2 h-25 w-25 border-theme-primary-100 dark:border-theme-secondary-800"
                    />
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Author
                      </span>
                      <div
                        class="mt-1 text-lg font-bold text-theme-primary-100 truncate dark:text-theme-secondary-800"
                      >
                        Exchange
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
